<resources>
    <string name="app_name">Insset App</string>
    <string name="titre_accueil">Accueil</string>
    <string name="bio_accueil">Bastian Boulogne</string>
    <string name="titre_liste">Liste</string>
    <string name="nom_exemple">Galaxy S10</string>
    <string name="marque_exemple">Samsung</string>
    <string name="image_exemple">xiaomi logo</string>
    <string name="like_exemple">bouton like</string>
    <string name="database_titre">Room</string>
    <string name="database_bouton_detruire">Détruire</string>
    <string name="database_bouton_creer">Créer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retrofit_titre">Retrofit</string>
</resources>