<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond"
    tools:context=".fragments.AccueilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/accueil_titre"
            android:background="@color/fondSecondaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/texte"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/titre_accueil" />

        <TextView
            android:id="@+id/accueil_nom_app"
            android:layout_below="@id/accueil_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/texte"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/accueil_auteur"
            android:layout_below="@id/accueil_nom_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/texte"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/bio_accueil" />

        <TextView
            android:layout_below="@id/accueil_auteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/texte"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/indication_accueil" />


    </RelativeLayout>

</FrameLayout>